# monopatoux

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  main.py  requirements.txt
dupes_finder/: BUILD.bazel  Cargo.toml  README.md  clippy.toml
dupes_finder/src/: fileinfo.rs  main.rs  printing.rs
dupes_finder/tests/: cli.rs
exploration/explore_pytest/: conftest.py  test_single.py
exploration/explore_pytest/duplicate_fixture_name/: conftest.py  test_double.py
exploration/nucleo/: README.md
exploration/nucleo/src/: main.c
exploration/python_bazel/: BUILD.bazel  run_py_binary_in_python.py
libs/comtrade-rs/: .gitignore  README.md
libs/comtrade-rs/python/: BUILD.bazel
libs/comtrade-rs/python/comtrade/: __init__.py
libs/comtrade-rs/python/tests/: test_hello.py
libs/comtrade-rs/rs/: BUILD.bazel  Cargo.toml
libs/comtrade-rs/rs/src/: lib.rs
libs/context-timing/: .gitignore  BUILD.bazel  README.md  example.py  pyproject.toml
libs/context-timing/src/context_timing/: BUILD.bazel  __init__.py  context_timing.py
libs/context-timing/tests/: BUILD.bazel  test_context.py
libs/pytest-reporting/: BUILD.bazel  README.md  requirements.txt
libs/pytest-reporting/podman/: BUILD.bazel  db_ctl.sh  docker-compose.yml
libs/pytest-reporting/src/pytest_reporting/: BUILD.bazel  plugin.py
libs/pytest-reporting/src/reporting_db/: BUILD.bazel  admin.py  apps.py  manage.py  models.py  serializers.py  views.py
libs/pytest-reporting/src/reporting_db/reporting_db/: settings.py  urls.py
libs/pytest-reporting/tests/: BUILD.bazel  conftest.py  test_owner.py
tools/pytest/: BUILD.bazel  README.md  defs.bzl  run_pytest.py
tools/ruff/: BUILD.bazel  MODULE.bazel  README.md  ruff_extension.bzl  ruff_rule.bzl  run_ruff.py  run_ruff.sh
