bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_shell", version = "0.6.1")

# python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.14")
python.toolchain(python_version = "3.14")
use_repo(python, "python_3_14")


# requirements
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_common",
    requirements_lock = "//:requirements.lock",
    python_version="3.14",
)
use_repo(pip, "pip_common")

ruff_ext = use_extension("//tools/ruff:ruff_extension.bzl", "ruff")
use_repo(ruff_ext, "ruff_bin")
