bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12", is_default = True)
use_repo(python, "python_3_12")

register_toolchains("@python_3_12//:all")


# requirements
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_common",
    requirements_lock = "//:requirements.lock",
    python_version="3.12",
)
use_repo(pip, "pip_common")

ruff_ext = use_extension("//tools/ruff:ruff_extension.bzl", "ruff")
ruff_ext.base(
    name = "ruff",
    version = "0.15.2",
    sha256 = "278b307eccb4eef6a153d811466dd8170d4fd74970cc4a44c793b40bd897e403",
)
use_repo(ruff_ext, "ruff")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//dupes_finder:Cargo.toml",
        "//libs/comtrade-rs/rs:Cargo.toml",
    ],
)
use_repo(crate, "crate_index")
