load("@aspect_rules_py//py:defs.bzl", "py_binary")

py_binary(
    name = "run_ruff",
    srcs = ["run_ruff.py"],
    data = ["@ruff//:ruff-x86_64-unknown-linux-gnu/ruff"],
    main = "run_ruff.py",
    args = ["$(rlocationpaths @ruff//:ruff-x86_64-unknown-linux-gnu/ruff)"],
    visibility = ["//visibility:public"],
)
