load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "run_ruff",
    srcs = ["run_ruff.sh"],
    data = ["@ruff//:ruff-x86_64-unknown-linux-gnu/ruff"],
    args = [
        "$(location @ruff//:ruff-x86_64-unknown-linux-gnu/ruff)",
    ],
    visibility = ["//visibility:public"],
)
