load("@rules_rust//rust:defs.bzl", "rust_shared_library", "rust_library")

rust_library(
    name = "comtrade_rs",
    srcs = ["src/lib.rs"],
    edition = "2024",
    deps = [
        "@crate_index//:pyo3",
    ],
    visibility = ["//visibility:public"],
)

rust_shared_library(
    name = "comtrade",
    srcs = ["src/lib.rs"],
    edition = "2024",
    deps = [
        "@crate_index//:pyo3",
    ],
    visibility = ["//visibility:public"],
)
